# mect1

AAD/AAD_assignment1/: README.md  xors.ods
AAD/AAD_assignment1/Encoder/: Encoder.qpf  Encoder.qsf  Encoder.qws  Encoder.vhd  Encoder.vhd.bak  Waveform.vwf  gateXOr2.vhd
AAD/AAD_assignment1/Encoder/db/: .cmp.kpt  Encoder.(0).cnf.cdb  Encoder.(0).cnf.hdb  Encoder.(1).cnf.cdb  Encoder.(1).cnf.hdb  Encoder.asm.qmsg  Encoder.asm.rdb  Encoder.cmp.bpm  Encoder.cmp.cdb  Encoder.cmp.hdb  Encoder.cmp.idb  Encoder.cmp.logdb  Encoder.cmp.rdb  Encoder.cmp_merge.kpt  Encoder.db_info  Encoder.eda.qmsg  Encoder.fit.qmsg  Encoder.hier_info  Encoder.hif  Encoder.lpc.html  Encoder.lpc.rdb  Encoder.lpc.txt  Encoder.map.bpm  Encoder.map.cdb  Encoder.map.hdb  Encoder.map.kpt  Encoder.map.qmsg  Encoder.map.rdb  Encoder.map_bb.cdb  Encoder.map_bb.hdb  Encoder.npp.qmsg  Encoder.pre_map.hdb  Encoder.root_partition.map.reg_db.cdb  Encoder.routing.rdb  Encoder.rtlv.hdb  Encoder.rtlv_sg.cdb  Encoder.rtlv_sg_swap.cdb  Encoder.sgate.nvd  Encoder.sgate_sm.nvd  Encoder.sta.qmsg  (+11 more)
AAD/AAD_assignment1/Encoder/incremental_db/compiled_partitions/: Encoder.db_info  Encoder.root_partition.cmp.ammdb  Encoder.root_partition.cmp.cdb  Encoder.root_partition.cmp.hbdb.cdb  Encoder.root_partition.cmp.hbdb.hdb  Encoder.root_partition.cmp.hdb  Encoder.root_partition.cmp.rcfdb  Encoder.root_partition.map.cdb  Encoder.root_partition.map.dpi  Encoder.root_partition.map.hbdb.cdb  Encoder.root_partition.map.hbdb.hdb  Encoder.root_partition.map.hdb  Encoder.root_partition.map.kpt  Encoder.rrp.hdb  Encoder.rrs.cdb
AAD/AAD_assignment1/Encoder/output_files/: Encoder.asm.rpt  Encoder.done  Encoder.eda.rpt  Encoder.fit.rpt  Encoder.fit.summary  Encoder.flow.rpt  Encoder.jdi  Encoder.map.rpt  Encoder.map.summary  Encoder.pin  Encoder.sta.rpt
AAD/AAD_assignment1/Encoder/simulation/modelsim/: Encoder.vo  Encoder_modelsim.xrf
CM/projeto/src/ArrayExample/: nodeA.py  nodeB.py
CM/projeto/src/RangeTesting/: gateway.py  receiver.py  sender.py
CM/projeto/src/lopy2lopyTesting/: receiver_auto.py  sender.py
CM/projeto/src/temperature_sensing/: read_temperature.py  read_temperature2.py  temperature_receiver.py  temperature_sender.py
IC/: .gitignore
IC/DisplayImage/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
IC/projetos/: .gitignore
IC/projetos/project01/: BitStream.hh  CMakeLists.txt  README.md  Wav_quant.hh  decoder.cpp  encoder.cpp  test.txt  test_BitStream.cpp  wav_cmp.cpp  wav_cmp_extra.cpp  wav_dct.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp
IC/projetos/project01/plots/ex1/: plots.py
IC/projetos/project01/plots/ex2/: max_absolute_error.txt  mse.txt  plots.py  snr.txt
IC/projetos/project01/plots/ex7/: plots.py
IC/projetos/project02/: .gitignore  CMakeLists.txt  data  sample05
IC/projetos/project02/src/: decoder.cpp  encoder.cpp  extract_channel.cpp  light.cpp  losslessWavDecode.cpp  losslessWavEncode.cpp  mirror.cpp  negative.cpp  rotate.cpp  test_BitStream.cpp  test_Golomb.cpp
IC/projetos/project02/src/include/: BitStream.cpp  BitStream.hh  Golomb.cpp  Golomb.hh
IC/projetos/project02/src/plots/: histogram.py
IC/trab2/: CMakeLists.txt  ex1.cpp
MDRS/projetos/proj1/: 1d.txt  Simulator1.m  Simulator1V2.m  Simulator2.m  Simulator2V2.m  Simulator3.m  Simulator3V2.m  Simulator4V2.m  ex1.asv  ex1.m  ex1b.m  ex1c.m  ex1d.m  ex1e.m  ex2a.asv  ex2a.m  ex2b.m  ex2c.asv  ex2c.m
MDRS/projetos/proj2/: HillClimbingStrategy.m  InputDataProject2.mat  Task1.asv  Task1.m  ex1c.asv  ex1c.m  ex2.m  greedyRandomizedStrategy.asv  greedyRandomizedSymmetrical.m
(+9 files in other folders)
